<resources>
    <string name="app_name">MNSDKKit</string>
    <string name="order_better_service">为了提供更好的服务，[</string>
    <string name="order_better_service_permissions">]希望您授予以下权限。</string>
    <string name="permission_CAMERA">访问相机与访问相册权限</string>
    <string name="permission_RECORD_AUDIO">访问麦克风权限</string>
    <string name="permission_WRITE_EXTERNAL_STORAGE">存储与读取权限</string>
    <string name="permission_ACCESS_COARSE_LOCATION">访问位置权限</string>
    <string name="permission_READ_CONTACTS">访问通讯录权限</string>
    <string name="permission_SEND_SMS">获取短信权限</string>
    <string name="permission_READ_PHONE_STATE">读取设备配置权限</string>
    <string name="permission_WRITE_CALENDAR">访问日历权限</string>
    <string name="permission_BODY_SENSORS">访问传感器权限</string>
    <string name="permission_tip">的正常运行，需要对以下权限进行授权, 是否立即授权？</string>
    <string name="permission_refused_tip1">您拒绝的以下权限已经影响到[</string>
    <string name="permission_refused_tip2">] 的正常运行，请到应用权限设置中对以下权限进行授权！</string>
    <string name="authorize_now">立即授权</string>
    <string name="go_to_settings">前往设置</string>
    <string name="next_time_say">取消</string>
    <string name="more_good_server">为了提供更好的消息推送服务，建议您首次启动</string>
    <string name="more_good_server_open_GPS">开启GPS定位功能，以便为您选择最佳推送服务。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="add_exit_user">此设备已被其他用户绑定</string>
    <string name="add_snnotexist">序列号不存在</string>
    <string name="add_errorcode">验证码错误</string>
    <string name="add_addfaiue">添加失败</string>
    <string name="add_addsuccess">添加成功</string>
    <string name="add_added">该设备已经添加</string>
    <string name="add_maxdevice">该设备已超最大绑定数</string>
    <string name="add_personed">该设备已经绑定用户</string>
    <string name="add_emptynot">序列号或验证码不能为空</string>
    <string name="add_poornet">当前网络不好，请稍后再试</string>
    <string name="qr_me_notline">设备已经被您绑定啦但是此时不在线啦</string>
    <string name="qr_me">设备已经被您绑过啦且在线可以去观看啦</string>
    <string name="qr_other">这个设备已经被别人绑定了</string>
    <string name="add_nowifi">请打开wifi网络</string>
    <string name="add_nonetwifi">暂时没有网络，请打开wifi网络</string>
    <string name="add_nodev">暂无设备</string>
    <string name="cloud_nonet">当前没有网络连接，请确保你已经打开网络</string>
    <string name="time_out_tip">请求超时</string>
    <string name="wifi_title">第二步 连接无线网</string>
    <string name="revice_wifiinfo_success">\"听到设备提示接收无线信息成功\" \n\n点击下一步按钮</string>
    <string name="connecting">摄像机正在连接服务器</string>
    <string name="wait_two_min">需要大约2分钟，您就可以用手机观看摄像机拍到的美景了</string>
    <string name="sl_seconds_later">等待连接中...</string>
    <string name="add_volume_two">点击发送声波按钮</string>
    <string name="add_volume_three">让摄像机连上WIFI无线网</string>
    <string name="add_volume_four">声波发送中...</string>
    <string name="add_volume_five">发送完毕，等待摄像头发出</string>
    <string name="add_volume_six">接收无线信息成功的提示</string>
    <string name="add_volume_seven">如果沒有收到，请重新点击发送声波</string>
    <string name="bing_dev">正在绑定中&#8230;</string>
    <string name="bind_title">没有绑定成功</string>
    <string name="add_wifi_tip">温馨提示</string>
    <string name="add_wifi_listen">是否听到接收无线信息成功?</string>
    <string name="add_widi_ok">确认</string>
    <string name="add_volme_next">下一步</string>
    <string name="tip_title">提示</string>
    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="task_hd">高清</string>
    <string name="task_sd">标准</string>
    <string name="task_fluent">流畅</string>
    <string name="task_nosusd">不支持标准码流</string>
    <string name="task_prego">准备就绪中</string>
    <string name="drag_card_recording">拖动查看卡录像</string>
    <string name="intercoming">对讲中&#8230;</string>
    <string name="task_getdata">正在建立安全通道&#8230;</string>
    <string name="task_finished">播放结束啦.</string>
    <string name="task_noalarm">无报警事件.</string>
    <string name="openVideo_error">打开视频失败</string>
    <string name="task_offline">设备不在线啦</string>
    <string name="task_net_nogood">设备网络不太好\n请检查设备网络或重试</string>
    <string name="task_connect_failed">连接失败，请重试</string>
    <string name="recomm_prefecture_video_erro">视频播放错误，请重试!</string>
    <string name="text_btn_cot">截图</string>
    <string name="screenshot_success">截图成功</string>
    <string name="text_btn_talk">对讲</string>
    <string name="text_btn_videotape">录像</string>
    <string name="text_btn_voice">声音</string>
    <string name="mnts_intercoming">对讲中...</string>
    <string name="hold_and_talk">按住对讲</string>
    <string name="rest_Preparing">正在准备任务</string>
    <string name="mnts_Peady">准备就绪</string>
    <string name="mnts_Connecting">正在建立安全通道...</string>
    <string name="mnts_Running">正在播放...</string>
    <string name="mnts_finished">视频播放结束啦</string>
    <string name="mnts_Destroyed">任务已销毁...</string>
    <string name="mnts_DeviceOffline">设备不在线.</string>
    <string name="mnts_Connect_failed">连接失败，请重试...</string>
    <string name="task_prelive">等待视频，请稍后&#8230;</string>
    <string name="task_revideoing">正在录像，请停止后再试</string>
    <string name="no_valid_alarm_message">消息已删除</string>
    <string name="net_err_and_try">网络差，请稍后点击重试。</string>
    <string name="click_btn_and_play">点击开始播放</string>
    <string name="tv_recording_please_stop_and_try">正在录像，请停止后再试</string>
    <string name="scan_text">将二维码放入框内,即可自动扫描</string>
    <string name="scode_elec">打开手电筒</string>
    <string name="scode_title">扫描二维码</string>
    <string name="share_qrcode_succ">二维码保存成功</string>
    <string name="device_not_identified">未识别该设备</string>
    <string name="try_other_ways">扫描失败,请尝试其它方式添加</string>
    <string name="device_not_identified_try_other_ways">未识别该设备,请尝试其它方式添加</string>
    <string name="change_dev_name_failed">修改设备名称失败</string>
    <string name="change_dev_name_suc">修改设备名称成功</string>
    <string name="getfirmware_info_failed">获取固件信息失败</string>
    <string name="qrcode_scan">扫描</string>
    <string name="qrcode_pics">相册</string>
    <string name="qrcode_pic">未识别二维码</string>
    <string name="send_success">发送成功</string>
    <string name="name_your_device">为你的设备取个名字</string>
    <string name="special_characters_are_not_supported">请输入设备名称</string>
    <string name="remove_the_added_camera">确定退出添加摄像机</string>
    <string name="dia_cancel">取消</string>
    <string name="dia_confirm">确定</string>
    <string name="net_noperfect">网络不好，稍后重试</string>
    <string name="add_share_dev_suc">添加共享设备成功</string>
    <string name="add_share_dev_failed">添加共享设备失败</string>
    <string name="no_share_users">这个设备没有共享给其他人</string>
    <string name="qr_code">摄像机</string>
    <string name="dev_type_name">摄像机</string>
    <string name="dev_attend_name">人脸考勤</string>
    <string name="come_from">来自：</string>
    <string name="to_the_border">我已经转到边界啦</string>
    <string name="preset_point_full">收藏点已经满了，请删除一个收藏点之后，再重新设置。</string>
    <string name="reset_angle_successful">复位成功</string>
    <string name="already_download_task">已经有一个下载任务</string>
    <string name="no_valid_download_address">没有有效的下载地址</string>
    <string name="share_click">点击</string>
    <string name="coun_content">基于数据保护政策的原因，不同地区只能访问相应数据中心。切换后，当前账户下绑定的设备不会迁移新的数据中心，请知晓</string>
    <string name="coun_local_l">当前选择地区:</string>
    <string name="coun_local">上次选择地区:</string>
    <string name="coun_localone">上次登录地区:</string>
    <string name="coun_china">美国</string>
    <string name="coun_hk">中国香港</string>
    <string name="coun_india">印度</string>
    <string name="coun_areas">地区</string>
    <string name="coun_tb">中国台湾</string>
    <string name="hint">提示</string>
    <string name="dia_confirms">确认并切换</string>
    <string name="info_th">可将原有设备重置后重新添加使用</string>
    <string name="info_t">切换地区后需要重新登陆</string>
    <string name="country">选择地区</string>
    <string name="country_search">搜索</string>
    <string name="country_text">国家和地区</string>
    <string name="country_search2">输入国家或地区首字母查询</string>
    <string name="set_isempty">密码不能为空</string>
    <string name="set_request">密码必须由6&#8211;18位数字和字母组合</string>
    <string name="set_repet">重复密码不能为空</string>
    <string name="set_noequals">两次密码不一致</string>
    <string name="set_succ">密码设置成功</string>
    <string name="register_send_vcode">验证码已发送到您的邮箱中,有效期30分钟</string>
    <string name="register_email_used">邮箱已被占用</string>
    <string name="register_email_invalid">邮箱格式错误</string>
    <string name="register_vcode">验证码不能为空</string>
    <string name="register_outtime">验证码超时</string>
    <string name="registe_nona">手机号码不正确</string>
    <string name="register_enpty">手机号码或邮箱不能为空</string>
    <string name="register_phoneempty">手机号码或邮箱不能为空</string>
    <string name="register_email_not_exist">邮箱不存在</string>
    <string name="register_emptyemail">邮箱不能为空</string>
    <string name="login_hint_ri_user">请输入手机号/邮箱地址</string>
    <string name="login_hint_user">请输入手机号码/邮箱</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_email">请填写您的邮箱地址</string>
    <string name="login_rister">注册新用户</string>
    <string name="login_forgot">忘记密码？</string>
    <string name="rister">请输入6位验证码</string>
    <string name="rister_getcall">获取验证码</string>
    <string name="rister_yespwd">请确认密码</string>
    <string name="next_step">下一步</string>
    <string name="confirm">确认</string>
    <string name="forgot_user">请输入手机号/邮箱地址</string>
    <string name="forgot_newpwd">6&#8211;20位数字和字母组合</string>
    <string name="forgot_newpwd_verify">确认密码</string>
    <string name="rister_username">注册</string>
    <string name="been_registered">账号已经被注册</string>
    <string name="serialNo_failed">序列号或者密码错误哦</string>
    <string name="email_inconsistency">邮箱不一致</string>
    <string name="code_send">验证码已发出</string>
    <string name="pwd_limit">密码由字母、数字、下划线组成的6—20位字符串</string>
    <string name="account_error">账号或密码错误</string>
    <string name="pwd_so_long">新密码太长或太短，请重新设置</string>
    <string name="old_pwd_err">旧密码输入错误</string>
    <string name="rigster_emailfail">邮件发送失败</string>
    <string name="rigster_smsfail">短信发送失败</string>
    <string name="Invalid_app_key_and_app_secret">无效的app_key和app_secret</string>
    <string name="incorrect_format">参数不全或格式不对</string>
    <string name="verification_code_error">验证码错误,请重新输入</string>
    <string name="email_has_been_used">email已被使用</string>
    <string name="phone_has_been_used">手机号已被使用</string>
    <string name="phone_or_email_error">验证码错误</string>
    <string name="please_set_your_password">6到18位数字和字母的组合</string>
    <string name="loadding">努力加载中&#8230;</string>
    <string name="nonsupport_5g">5G signal does not support</string>
    <string name="sure_delete_camera">Are you sure you want to delete the camera?</string>
    <string name="open_wifi_frist">Please open the WIFI on your phone first!</string>
    <string name="select_dev_2_connect">Select the WIFI to be connected</string>
    <string name="no_dev_2_select">No device information</string>
    <string name="cancel_text">Cancel</string>
    <string name="tv_format_tip">After formatting, all files will be deleted\nDetermine the formatted TF card?</string>
    <string name="tv_live_play">Live</string>
    <string name="tv_share_device">Share device</string>
    <string name="tv_cloud_alarm_video">Cloud alarm video</string>
    <string name="tv_24_hour_cloud_recording">24-hour cloud recording</string>
    <string name="tv_local_card_recording">Local card recording</string>
    <string name="tv_basic_settings">Basic settings</string>
    <string name="tv_delete_device">Delete device</string>
    <string name="tv_my_share">All sharing devices</string>
    <string name="tv_permission_settings">Setting permissions</string>
    <string name="tv_choose_permission">Please choose the right to open to your family.</string>
    <string name="tv_select_all">All</string>
    <string name="tv_select_del">Delete</string>
    <string name="tv_select_read">Read</string>
    <string name="tv_restricted_permission">Restricted permission</string>
</resources>