<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_select_lay">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_select_lay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_select_all"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_select_all"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_select_del"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_select_del"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_select_read"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_select_read"
            android:textColor="@color/dark"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_restricted_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tv_restricted_permission"
        android:textColor="@color/dark_333333"
        android:textSize="16sp"
        android:visibility="gone" />
</RelativeLayout>