<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/receive_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@mipmap/nav_bg"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/receive_back"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:keepScreenOn="true"
                android:src="@mipmap/btn_back"
                />

            <LinearLayout
                android:id="@+id/receive_title"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/wifi_title"
                    android:textColor="@color/into_item"
                    android:textSize="16sp"/>
            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/send_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_volume_two"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_volume_three"/>
            </LinearLayout>

            <TextView
                android:id="@+id/sending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/add_volume_four"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/send_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/add_volume_five"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_volume_six"
                    android:textColor="@color/title_start"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_volume_seven"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_wiat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/connect_come"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/connect_top"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/connecting"
                    android:textColor="@color/into_item"
                    android:textSize="16dip"/>

                <TextView
                    android:id="@+id/connect_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/connect_come"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/wait_two_min"
                    android:textColor="@color/into_item"
                    android:textSize="12dip"/>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/loading_lo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/blue_2097fe"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:text="@string/sl_seconds_later"
            android:textColor="@color/blue_2097fe"
            android:textSize="18sp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_whait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />

        <FrameLayout
            android:layout_width="224dp"
            android:layout_height="224dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/iv_volume"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                />

            <ImageView
                android:id="@+id/iv_volume_gif"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>

      <!--  <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wifi名字："/>

        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wifi密码："/>

        <TextView
            android:id="@+id/tv_pwddeco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wifi名字和密码编码之后："/>

        <TextView
            android:id="@+id/tv_pwddeuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="userid编码之后："/>-->
    </LinearLayout>

    <Button
        android:id="@+id/next_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@mipmap/add_btn_no"
        android:enabled="false"
        android:text="@string/add_volme_next"
        android:textColor="@color/white"/>
</RelativeLayout>