<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_white_shape"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dlg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/tip_title"
        android:textColor="@color/dark_333333"
        android:textSize="18dip" />

    <RelativeLayout
        android:id="@+id/rl_alarm_next_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@mipmap/set_unbind" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/tv_format_tip"
            android:textColor="@color/login_int"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll_bottom_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_22_normal"
                android:gravity="center"
                android:text="@string/cancel_text"
                android:textColor="@color/dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_blue_22_normal"
                android:gravity="center"
                android:text="@string/label_ok"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>