<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_normal_radius10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/tv_permission_settings"
        android:textColor="@color/dark_333333"
        android:textSize="17dp" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:src="@mipmap/btn_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/tv_choose_permission"
        android:textColor="@color/gray_666666"
        android:textSize="15dip" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/authortyRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"></androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_blue_radius22"
        android:gravity="center"
        android:text="@string/add_volme_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17dip" />

</RelativeLayout>